# NC-GDPR-obfuscator-project

./: .gitignore  .safety-project.ini  README.md  documentation.txt  pyproject.toml  readme_v6.txt  requirements.txt  setup.py  user_documentation.txt
.github/workflows/: test.yml  tests.yml
src/: main.py  obfuscate_pii.py  process_file.py  read_file.py  v6.py  write_file.py
src/obfuscator/: main.py  process_file.py
tests/: test_main.py  test_obfuscate_pii.py  test_performance.py  test_process_file.py  test_read_file.py  test_v6.py  test_write_file.py
