[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obfuscator"
version = "0.1.0"
authors = [
    { name = "Tolu Ajibade" }
]
description = "A library to obfuscate PII in files stored in S3."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
obfuscator = "main:obfuscator"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]  # Automatically finds all valid packages

[tool.setuptools.package-data]
obfuscator = ["data/*.json", "config/*.ini", "requirements.txt"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }